kubernetes/back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
  labels:
    app: back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: back
        image: zbbfufu/docker-sfeir-back:2.0
        ports:
        - containerPort: 9000
