kubernetes/couchdb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: couchdb
spec:
  selector:
    matchLabels:
      app: couchdb # has to match .spec.template.metadata.labels
  serviceName: "couchdb"
  # replicas: 1 # by default is 1
  template:
    metadata:
      labels:
        app: couchdb # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: couchdb
        image: couchdb:2.1
        ports:
        - containerPort: 5984
          name: db
        volumeMounts:
        - name: couchdb-data
          mountPath: /opt/couchdb/data
  volumeClaimTemplates:
  - metadata:
      name: couchdb-data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: "hostpath"
      resources:
        requests:
          storage: 100Mi
