kubernetes/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-service
  labels:
    app: back
spec:
  ports:
  - port: 9000
    name: web
  clusterIP: None
  selector:
    app: back
