kubernetes/couchdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb-service
  labels:
    app: couchdb
spec:
  ports:
  - port: 5984
    name: db
  clusterIP: None
  selector:
    app: couchdb
