kubernetes/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  labels:
    app: front
spec:
  ports:
  - port: 80
    targetPort: 3000
    name: web
  clusterIP: None
  selector:
    app: front
