kubernetes/webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui
  labels:
    app: webui
spec:
  ports:
  - port: 80
    targetPort: 80
    name: web
  clusterIP: None
  selector:
    app: front
