kubernetes/webui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /webui
        backend:
          serviceName: webui-service
          servicePort: 80
